# guitar-assistant

./: GuitarAssistant.py  README.md  main.py  manage.py  pyproject.toml  views.py
guitarAssistant/: asgi.py  settings.py  urls.py  wsgi.py
tuning/: apps.py  views.py
