[tool.poetry]
name = "guitar-assistant"
version = "0.1.0"
description = "Your one stop shop for guitar needs."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
